disable esc starts meta key sequence

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,4 +15,8 @@ set -g status-style bg=default
 # set -g status-justify centre
 
 # Empty right status
-set-option -g status-right ""
+set -g status-right ""
+
+# Fix problem that Esc is seen as Meta (alt) key
+# https://github.com/LazyVim/LazyVim/discussions/658
+set -g escape-time 0
