N and K keybindings; update README

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,9 @@ set -g status-right ""
 # Fix problem that Esc is seen as Meta (alt) key
 # https://github.com/LazyVim/LazyVim/discussions/658
 set -g escape-time 0
+
+# Custom Keybindings
+# [N]ew session
+bind N command-prompt -p "New Session:" "new-session -A -s '%%'"
+# [K]ill session
+bind K confirm kill-session
