disable mouse; hjkl select pane keymap

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 # Enable mouse mode
-set -g mouse on
+# (disabled bcs... i use keyboard haha)
+# (and if need mouse to highlight, need native terminal mouse instead of tmux mouse)
+# set -g mouse on 
 
 # Increase scrollback buffer size
 set -g history-limit 50000
@@ -21,8 +23,18 @@ set -g status-right ""
 # https://github.com/LazyVim/LazyVim/discussions/658
 set -g escape-time 0
 
+####################
 # Custom Keybindings
+####################
+
 # [N]ew session
 bind N command-prompt -p "New Session:" "new-session -A -s '%%'"
+
 # [K]ill session
 bind K confirm kill-session
+
+# vim motions to select pane
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
