status-right shows yyyy-mm-dd hh:mm

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ set -g status-style bg=default
 # set -g status-position top
 # set -g status-justify centre
 
-# Empty right status
-set -g status-right ""
+# Right status shows date and time
+set -g status-right "%Y-%m-%d %H:%M"
 
 # Fix problem that Esc is seen as Meta (alt) key
 # https://github.com/LazyVim/LazyVim/discussions/658
